<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditionListingActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="7dp"
        android:text="@string/entrez_le_nom_de_la_liste"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtNomListe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtNomListe"
        app:layout_constraintVertical_bias="0.016" />

    <EditText
        android:id="@+id/txtNomListe"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginTop="341dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/liste_d_epicerie"
        app:layout_constraintBottom_toTopOf="@+id/btnNomListe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNomListe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="251dp"
        android:onClick="onCreerListe"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtNomListe"
        app:layout_constraintTop_toBottomOf="@+id/txtNomListe" />

</androidx.constraintlayout.widget.ConstraintLayout>